rke2-manifest/04-longhorn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
---
apiVersion: helm.cattle.io/v1
kind: HelmChart
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  repo: "https://charts.longhorn.io"
  chart: longhorn
  targetNamespace: longhorn-system
  valuesContent: |-
    defaultReplicaCount: 1
    resources:
      limits:
        cpu: 100m
        memory: 128Mi
      requests:
        cpu: 100m
        memory: 128Mi
