rke2-manifest/06-rancher.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: fleet-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: rancher-operator-system
---
apiVersion: v1
data:
  cacerts.pem: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJsekNDQVR5Z0F3SUJBZ0lSQUpWRXplTGd0RDBhR0ptS1RPTlBteVV3Q2dZSUtvWkl6ajBFQXdJd0tURW4KTUNVR0ExVUVBeE1lYVdSbGJuUnBkSGt1YkdsdWEyVnlaQzVqYkhWemRHVnlMbXh2WTJGc01CNFhEVEl3TURreApPREV4TXpVeU1Gb1hEVE13TURreE5qRXhNelV5TUZvd0tURW5NQ1VHQTFVRUF4TWVhV1JsYm5ScGRIa3ViR2x1CmEyVnlaQzVqYkhWemRHVnlMbXh2WTJGc01Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRVA2NFcKa0lmNWlVREZ2M21QOUVMc0YxaFlkWVVsTkRXL0FlZGtUY1AwelFLNllad1o4THZ6ekk0ejU2ZjdVazRJbVVuQQpxcmdITVJlcVlra [...]
kind: Secret
metadata:
  name: tls-ca
  namespace: cattle-system
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: psp-rolebinding-rancher-operator-system
  namespace: rancher-operator-system
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: system-unrestricted-psp-role
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: system:serviceaccounts
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: psp-rolebinding-fleet-system           
  namespace: fleet-system           
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: system-unrestricted-psp-role
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: system:serviceaccounts
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: psp-rolebinding-longhorn-system
  namespace: longhorn-system
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: system-unrestricted-psp-role
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group  
  name: system:serviceaccounts
---
apiVersion: helm.cattle.io/v1
kind: HelmChart
metadata:
  name: rke2-rancher
  namespace: cattle-system
spec:
  chart: rancher
  repo: "https://releases.rancher.com/server-charts/latest"
  targetNamespace: cattle-system
  valuesContent: |-
    resources:
      limits:
        memory: 256Mi
      requests:
        cpu: 100m
        memory: 50Mi
    hostname: rancher.k8s.intra
    ingress:
      extraAnnotations:
        cert-manager.io/cluster-issuer: ca-issuer
      tls:
        source: secret
        secretName: tls-rancher-ingress
